--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,3 +11,7 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- 
+  RESOURCE: https://www.youtube.com/watch?v=fFHyqhmnVfs
+ -->
